Fix sidebar overflow

--- a/style/style.css
+++ b/style/style.css
@@ -38,6 +38,7 @@ h1 {
   border-radius: 5px;
   background-color: #00CACA;
   font-size: 85%;
+  overflow-y: scroll;
 }
 
 #sidebar a {
@@ -50,13 +51,12 @@ h1 {
 }
 
 #sidebar h2 {
-  width: 100%;
-  text-align: center;
-  padding: 10px;
+  width: 80%;
+  padding: 0px;
 }
 
 #sidebar section {
-  margin: 10px 15px 0 15px;
+  margin: 20px 15px 0 15px;
   text-align: justify;
 }
 
